--- a/JuicedFixes/JuicedFixes.vcxproj.filters
+++ b/JuicedFixes/JuicedFixes.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
