--- a/fixes.ini
+++ b/fixes.ini
@@ -1,7 +1,8 @@
 [Fixes]
 PatchInput = true
 PatchVirtualMemory = true
-PatchCalendarCrash = ture
+PatchCalendarCrash = true
+ShowXI4JWindow = true
 
 // To configure your controller, you need to
 // Fill in the key codes to corresponding actions
