Fix typo fixes.ini

--- a/fixes.ini
+++ b/fixes.ini
@@ -1,7 +1,7 @@
 [Fixes]
 PatchInput = true
 PatchVirtualMemory = true
-PatchCalendarCrash = ture
+PatchCalendarCrash = true
 
 // To configure your controller, you need to
 // Fill in the key codes to corresponding actions
