--- a/JuicedFixes/JuicedFixes.vcxproj
+++ b/JuicedFixes/JuicedFixes.vcxproj
@@ -170,9 +170,10 @@
     <ClCompile Include="dllmain.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="fixes.ini">
+    <CopyFileToFolders Include="fixes.ini">
       <DeploymentContent>true</DeploymentContent>
-    </None>
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="controller.h" />
