--- a/JuicedFixes/fixes.ini
+++ b/JuicedFixes/fixes.ini
@@ -1,2 +1,61 @@
 [Fixes]
 PatchInput = true
+PatchVirtualMemory = true
+PatchCalendarCrash = ture
+
+// To configure your controller, you need to
+// Fill in the key codes to corresponding actions
+// The key codes are listed below:
+
+// Button Y       0
+// Button X       1
+// Button A       2
+// Button B       3
+// DPad Down      4
+// DPad Up        5
+// DPad Left      6
+// DPad Right     7
+// Left Shoulder  8
+// Right Shoulder 9
+// Left Thumb     10
+// Right Thumb    11
+// Start          12
+// Back           13
+
+// Those controls are used when in menuing
+[MenuControls]
+Left = 6
+Right = 7
+Up = 5
+Down = 4
+
+Accept = 2
+Back = 3
+
+PageDown = 0
+Tab = 1
+
+// Those controls are used when racing
+[RaceControls]
+Pause = 12
+Skip = 2
+
+ChangeView = 13
+Horn = 5
+LookBack = 4
+
+GearDown = 3
+GearUp = 2
+Handbrake = 8
+Nitro = 1
+Reverse = 9
+
+// I have no idea what those correspond to
+// But I left those for testing purposes
+Race9 = 110
+Race10 = 110
+Race11 = 110
+Race12 = 110
+Race13 = 110
+Race14 = 110
+Race15 = 110
