--- a/JuicedFixes/fixes.ini
+++ b/JuicedFixes/fixes.ini
@@ -1,7 +1,7 @@
 [Fixes]
 PatchInput = true
-PatchVirtualMemory = true
-PatchCalendarCrash = ture
+PatchVirtualMemory = true // Only works on version 1.0
+PatchCalendarCrash = true
 
 // To configure your controller, you need to
 // Fill in the key codes to corresponding actions
